Changes : Adding notification jms broker support (using embedded broker), to get asynchronous behavior on sending notification.

--- a/notify-user-sample/src/main/resources/log4j.properties
+++ b/notify-user-sample/src/main/resources/log4j.properties
@@ -8,3 +8,4 @@ log4j.category.org.springframework.security=INFO
 log4j.category.org.apache.tiles=INFO
 log4j.category.org.apache.commons.digester=INFO
 log4j.category.org.hibernate=INFO
+log4j.category.org.apache.activemq=INFO
