--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<slf4j.version>1.7.7</slf4j.version>
 	
 		<spring.version>4.0.6.RELEASE</spring.version>
+		<spring-security.version>3.2.5.RELEASE</spring-security.version>
 		<aspectj.version>1.8.1</aspectj.version>
 		<activemq.version>5.10.0</activemq.version>
 	</properties>
