--- a/notify-user-sample/pom.xml
+++ b/notify-user-sample/pom.xml
@@ -91,6 +91,14 @@
 			<artifactId>spring-security-acl</artifactId>
 			<version>${spring-security.version}</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
