Just backup commit.

--- a/notify-user-sample/src/main/resources/META-INF/spring/application.properties
+++ b/notify-user-sample/src/main/resources/META-INF/spring/application.properties
@@ -1,3 +1,13 @@
+## Always generate password on user registration.
+innovez.security.credential.policy.alwaysGenerateCredentialOnRegistration=true
+
+## Number of days, when to start emit warning for user before password expiration.
+## Setting this value to zero means no warning will be emitted (warning disabled). 
+innovez.security.credential.policy.credentialExpirationWarningDay=7
+
+## Frequency of credential expiration per day, if enabled.
+innovez.security.credential.policy.credentialExpirationWarningFrequency=1
+
 ## Minimum password length
 innovez.security.credential.policy.minUserCredentialLength=8
 
